[package]
name = "xtr"
version = "0.1.0"
authors = ["Andre Popovitch <andre@popovit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20"
wgpu = "0.5.0"
futures = "0.3.4"
glsl-to-spirv = "0.1"
bytemuck = "1.2.0"
image = "0.23.4"
failure = "0.1.8"
cgmath = "0.17"
lyon = "0.15"
euclid = "0.20"